Fix: append a new post to the blog page and add truncate_text helper

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18,7 +18,6 @@ header {
     opacity: 0.5; }
 
 nav {
-  display: none;
   z-index: 10;
   position: absolute;
   top: 0;
@@ -40,6 +39,9 @@ nav {
       font-weight: bold; }
       nav ul li:hover {
         background-color: #C5913F; }
+      nav ul li a, nav ul li a:active, nav ul li a:visited {
+        color: #FAEDCD;
+        text-decoration: none; }
 
 #social {
   position: absolute;
