--- a/public/sass/partials/_header.scss
+++ b/public/sass/partials/_header.scss
@@ -19,7 +19,6 @@ header {
     }
 }
 nav {
-  display: none;
   z-index: 10;
   position: absolute;
   top: 0;
@@ -41,6 +40,10 @@ nav {
       font-weight: bold;
       &:hover {
         background-color: $darkColor3;
+      }
+      #{$a-tags} {
+        color: $lightColor1;
+        text-decoration: none;
       }
     }
   }
